feat: App bileşeninde düzenleme yapıldı, stil dosyaları güncellendi ve yeni CSS kuralları eklendi

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,4 @@
+/*
 .Footer {
     display: flex;
     justify-content: space-between;
@@ -37,7 +38,7 @@
 }
 
 .Footer__content-item:last-child {
-    /* border: none; */
+    !* border: none; *!
     border-left: 1px solid #314158;
 }
 
@@ -45,4 +46,9 @@
     .Footer {
         height: auto;
     }
-}
+}*/
+
+
+
+
+
