--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,66 +1,10 @@
-#app {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: calc(100vh - 32px);
-  border-radius: 10px;
-  /* border: 1px solid #314158; */
-}
-
-/* 
-#app header,
-#app footer {
-  flex: 1;
-  max-height: 60px;
-}
-
-#app footer {
-  max-height: 50px;
-} */
-
-
-.container {
-  display: flex;
-  flex-direction: column;
-}
-
-
-
-@media (min-width: 768px) {
-  #app {
-    height: calc(100vh);
-    border: 1px solid #314158;
-  }
-
-  #app header,
-  #app footer {
-    flex: 1;
+header,
+footer {
     max-height: 60px;
-  }
 
-  #app footer {
-    max-height: 50px;
-  }
+}
 
-  #app main {
-    flex: 2;
-    min-height: 800px;
-
-  }
-
-
-  .container {
-
-    height: 100%;
-    flex-direction: row;
-    box-sizing: border-box;
-    background-image: url("/green-layer.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-
-  }
-
-
-
+main {
+    width: 100%;
+    min-height: calc(100vh - 170px);
 }
