--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,12 @@
 header,
 footer {
     max-height: 60px;
-
 }
 
+.Container,
 main {
     width: 100%;
-    min-height: calc(100vh - 170px);
+    min-height: calc(100vh - 124.55px);
+    display: flex;
+    /* align-items: center; */
 }
