feat: About bileşeninde stil güncellemeleri yapıldı, Gist bileşeni eklendi ve Home bileşeninde düzenlemeler yapıldı

--- a/src/pages/Home/Css/Home.module.css
+++ b/src/pages/Home/Css/Home.module.css
@@ -5,5 +5,13 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    width: 100%;
+    height: 100%;
+}
 
+@media (max-width: 767px) {
+    .HomePage {
+        background-image: none;
+        align-items: center;
+    }
 }
