feat: Refactor CSS styles for Home and Projects components, improving layout and responsiveness

--- a/src/pages/Projects/Css/Projects.module.css
+++ b/src/pages/Projects/Css/Projects.module.css
@@ -43,4 +43,11 @@
     text-transform: full-size-kana;
     border-inline: 1px solid var(--color-slate-hover);
     border-block-end: 1px solid var(--color-slate-hover);
+    cursor: pointer;
+}
+
+.Content .LanguageTabArea .LanguageTabList .LanguageTabItem.active,
+.Content .LanguageTabArea .LanguageTabList .LanguageTabItem:hover {
+    background-color: var(--color-state);
+    color: #fff;
 }
