--- a/src/pages/Projects/Css/Projects.module.css
+++ b/src/pages/Projects/Css/Projects.module.css
@@ -6,6 +6,7 @@
 .Content {
     flex: 1;
     display: flex;
+    flex-direction: column;
 }
 
 .Content .LanguageTabArea {
@@ -50,4 +51,101 @@
 .Content .LanguageTabArea .LanguageTabList .LanguageTabItem:hover {
     background-color: var(--color-state);
     color: #fff;
+}
+
+
+/* Projects */
+.Content .Projects {
+    overflow-y: auto;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    padding: 64px;
+    color: var(--color-slate-hover);
+}
+
+.Projects .Project {
+    min-width: 400px;
+    height: max-content;
+    padding: 1px;
+}
+
+.Project .Title {
+    color: var(--color-indigo);
+    font: var(--font-heading-h6);
+    margin-bottom: 10px;
+    padding-inline: 10px;
+}
+
+.Project .Title .Name {
+    color: var(--color-state);
+    font: var(--font-body-sm);
+    text-transform: lowercase;
+}
+
+.Project .Card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #314158;
+    border-radius: var(--radius-card);
+    padding: 16px;
+}
+
+.Project .Card .Actions {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font: var(--font-body-lg);
+    display: flex;
+    justify-content: space-evenly;
+
+    min-width: 100px;
+    width: max-content;
+
+}
+
+.Project .Card .Actions .ActionLink {
+    color: var(--color-indigo);
+    background-color: rgba(41, 41, 44, 0.1);
+    border: 1px solid var(--color-indigo);
+    align-items: center;
+    padding: 5px 10px;
+    border-radius: var(--radius-button);
+}
+
+.Project .Card .Actions .ActionLink:hover {
+    color: var(--color-indigo-hover);
+}
+
+.Project .Card .Header {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.Project .Card .Header .Name {
+    font: var(--font-heading-h6);
+    color: var(--color-slate);
+    text-transform: capitalize;
+
+}
+
+.Project .Card .Header .Description {
+    font: var(--font-body-sm);
+    color: var(--color-state-hover);
+    width: 85%;
+}
+
+.Project .Card .Body {
+    margin-block-start: 20px;
+}
+
+.Project .Card .Body .StatusList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    list-style: none;
+    color: floralwhite;
 }
