feat: Update Projects page layout, enhance card styling, and refine repository details display

--- a/src/pages/Projects/Css/Projects.module.css
+++ b/src/pages/Projects/Css/Projects.module.css
@@ -66,7 +66,8 @@
 }
 
 .Projects .Project {
-    min-width: 400px;
+    min-width: 450px;
+    flex: 2;
     height: max-content;
     padding: 1px;
 }
@@ -82,6 +83,11 @@
     color: var(--color-state);
     font: var(--font-body-sm);
     text-transform: lowercase;
+    display: flex;
+}
+
+.Project .Title .Name span {
+    font-size: 4px !important;
 }
 
 .Project .Card {
@@ -90,18 +96,24 @@
     flex-direction: column;
     border: 1px solid #314158;
     border-radius: var(--radius-card);
-    padding: 16px;
+
+}
+
+.Project .Card:hover {
+    border: 1px solid var(--color-indigo);
+    background-color: rgba(207, 208, 225, 0.08);
 }
 
 .Project .Card .Actions {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 10px;
+    right: 10px;
     font: var(--font-body-lg);
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-evenly;
+    gap: 10px;
 
-    min-width: 100px;
     width: max-content;
 
 }
@@ -113,7 +125,9 @@
     align-items: center;
     padding: 5px 10px;
     border-radius: var(--radius-button);
+    text-decoration: none;
 }
+
 
 .Project .Card .Actions .ActionLink:hover {
     color: var(--color-indigo-hover);
@@ -123,6 +137,7 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+    padding: 20px 16px;
 }
 
 .Project .Card .Header .Name {
@@ -139,13 +154,28 @@
 }
 
 .Project .Card .Body {
-    margin-block-start: 20px;
+
+
+    padding: 20px 16px;
+    border-block: 1px solid var(--color-slate-hover);
 }
 
 .Project .Card .Body .StatusList {
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 20px;
     list-style: none;
     color: floralwhite;
+}
+
+.Project .Card .Body .StatusList .StatusItem {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.Project .Card .Body .StatusList .StatusItem svg {
+    color: var(--color-indigo);
+    font-size: 14px;
 }
